[project]
name = "travelife_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py (>=2.2.2,<3.0.0)",
    "google-adk (==0.1.0)",
    "cloudpickle (>=3.1.1,<4.0.0)",
]

[tool.poetry]
packages = [
    { include = "travelife_agent" }
]

[tool.poetry.dependencies]
python = ">=3.13"
requests = "^2.31.0"
pydantic = "^2.11.3"
python-dotenv = "^1.1.0"
google-cloud-aiplatform = {extras = ["adk", "agent_engines"], version = "^1.42.1"}


[tool.poetry.scripts]
travelife_agent = "travelife_agent:app"
deploy-local = "deployment.local:main"
deploy-remote = "deployment.remote:main"
cleanup = "deployment.cleanup:cleanup_deployment"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"